--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: cpp
+dist: xenial
 
 compiler:
-  - clang++
   - g++
 
-install:
+before_install:
+  # For C++17 support
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+
+install: 
+  # For C++17 support and build
+  - sudo apt-get install -qq g++-8
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
   - wget https://github.com/sharkdp/hyperfine/releases/download/v1.6.0/hyperfine_1.6.0_amd64.deb
   - sudo dpkg -i hyperfine_1.6.0_amd64.deb
   - make
